fix about alignment

--- a/sass/Components/aboutPage.scss
+++ b/sass/Components/aboutPage.scss
@@ -101,14 +101,13 @@
 
     .experience-master {
         @include smallB {
-            margin-top:330%;
         }
     }
 
     .experience-undergrad {
         @include smallB {
             position:absolute;
-            bottom: 30px;
+            bottom: -300%;
             padding-right:48px;
         }
         padding-right: 32px;
